--- a/acceptance/report.html
+++ b/acceptance/report.html
@@ -1552,25 +1552,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,297],[],[[4,0,1,0,[],[0,230,38,5],[]],[6,0,1,0,[],[0,270,14,5],[]],[7,0,1,0,[],[0,285,10,5],[]]],[],[3,0,3,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,767],[],[[4,0,1,0,[],[1,275,117],[]],[5,0,1,0,[],[1,396,200],[]],[6,0,1,0,[],[1,602,162],[]]],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TicTacToeTests","*C:\\tic-tac-toe\\acceptance\\TicTacToeTests.txt","*TicTacToeTests.txt","*Win Diagonally as X","*No keyword with name 'Start New Game' found.","*Win Horizontally as O","*Force a Tie"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TicTacToeTests","*C:\\tic-tac-toe\\acceptance\\TicTacToeTests.txt","*TicTacToeTests.txt","*Win Diagonally as X","*Win Horizontally as O","*Force a Tie"]);
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160123 11:15:09 GMT -05:00";
+window.output["generatedTimestamp"] = "20160127 01:20:10 GMT -05:00";
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 427;
+window.output["generatedMillis"] = 573;
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1453569308573;
+window.output["baseMillis"] = 1453879209427;
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":3,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":3,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":3,"id":"s1","label":"TicTacToeTests","name":"TicTacToeTests","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"TicTacToeTests","name":"TicTacToeTests","pass":3}]];
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
