--- a/acceptance/report.html
+++ b/acceptance/report.html
@@ -1552,25 +1552,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,767],[],[[4,0,1,0,[],[1,275,117],[]],[5,0,1,0,[],[1,396,200],[]],[6,0,1,0,[],[1,602,162],[]]],[],[3,3,3,3]];
+window.output["suite"] = [1,2,3,0,[],[1,0,2855],[],[[4,0,1,0,[],[1,803,763],[]],[5,0,1,0,[],[1,1568,750],[]],[6,0,1,0,[],[1,2322,518],[]]],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TicTacToeTests","*C:\\tic-tac-toe\\acceptance\\TicTacToeTests.txt","*TicTacToeTests.txt","*Win Diagonally as X","*Win Horizontally as O","*Force a Tie"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TicTacToeGUITests","*C:\\tic-tac-toe\\acceptance\\TicTacToeGUITests.txt","*TicTacToeGUITests.txt","*Win Diagonally as X","*Win Horizontally as O","*Force a Tie"]);
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160127 01:20:10 GMT -05:00";
+window.output["generatedTimestamp"] = "20160129 18:11:44 GMT -05:00";
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 573;
+window.output["generatedMillis"] = 2382;
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1453879209427;
+window.output["baseMillis"] = 1454112701618;
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"TicTacToeTests","name":"TicTacToeTests","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:00:02","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:02","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:03","fail":0,"id":"s1","label":"TicTacToeGUITests","name":"TicTacToeGUITests","pass":3}]];
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
